--- a/LogUploader_Win32/LogUploader_Win32.vcxproj.filters
+++ b/LogUploader_Win32/LogUploader_Win32.vcxproj.filters
@@ -23,6 +23,18 @@
     <None Include="icon1.ico">
       <Filter>Resource Files</Filter>
     </None>
+    <None Include="PrintNodeSteps_1.bmp">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="PrintNodeSteps_2.bmp">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="PrintNodeSteps_3.bmp">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="PrintNodeSteps_4.bmp">
+      <Filter>Resource Files</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h">
